taskmanager: Avoid flickering when scrolling in task tooltips

Using `QTimer::singleShot` to call `Backend::updateWindowHighlight` is
effective to avoid unnecessary window highlight updates when scrolling
in task tooltips.

BUG: 446672